Cambiamos index por segunda vez.
En este cambio se nos permite enviar a las paginas de tutoriales, publicaciones, etc.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <nav class="menu">
             <ul>
                 <li><a href="#Principal"> Inicio</a></li>
-                <li><a href="#Segunda"> Publicaciones</a></li>
-                <li><a href="file:///C:/Users/cristy/Desktop/MegamanVega%20Academy/tutoriales.html"> Tutoriales</a></li>
+                <li><a href="Publicaciones.html"> Publicaciones</a></li>
+                <li><a href="tutoriales.html"> Tutoriales</a></li>
             </ul>
         </nav>
 
@@ -40,20 +40,19 @@
  <section class="principal" id="Principal">
         <img src="imganes/MegamanVega Academy logo este sí.png" alt="">
         <h1> Estudiantes  empezando a <strong>emprender</strong></h1>
-        <a href="file:///C:/Users/cristy/Desktop/MegamanVega%20Academy/Formulario.html">
+        <a href="../MegamanVega Academy/Formulario.html">
         <button name="Boton1" id="boton1" type="button" class="principal-botón"> Obtén sesión gratis</button></a>
  </section>
 
- <section class="Somos" id="Segunda">
-     <h1>PUBLICACIONES</h1>
-    <article class="publicación-1" id="publicación-1">
-       <h2>LAMPARAS MINECRAFT <strong>$320</strong> </h2>
-       <img src="imganes/175990213_519825932759191_1395503692626574366_n.jpg" alt="">
-       <p>Comentarios (2)</p>
-       <a href="file:///C:/Users/cristy/Desktop/MegamanVega%20Academy/Formulario.html" target="_blank"><input type=button value=Obten sesión gratis></a>
-       <button class="Principal-boton">Comprar</button>
-      </article>
-       
+ <section class="Registro" id="Segunda">
+     <div class="registro_container">
+         <div class="registro_hijo1">
+             <h3>Publica tus creaciones</h3>
+         </div>
+         <div class="registro_hijo1">
+            <a href="https://forms.gle/qNx3TRXu1KgY22XB7"><button>Publica aquí</button></a> 
+         </div>
+     </div>
  </section>
 
  <section class="como-usar" id="como-usar">
