--- a/tutoriales.html
+++ b/tutoriales.html
@@ -21,7 +21,7 @@
         </figure>
 <nav class="menu">
 <ul>
-    <li><a href="file:///C:/Users/cristy/Desktop/MegamanVega%20Academy/Econom%C3%ADa%20estudiantil.html">Inicio</a></li>
+    <li><a href="index.html">Inicio</a></li>
     <li><a href="#">Categorias</a>
         <ul>
             <li><a href="#Tutoriales de dibujo">Tutoriales de dibujo</a>
