--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
  <section class="Registro" id="Segunda">
      <div class="registro_container">
          <div class="registro_hijo1">
-             <h3>Publica tus creaciones</h3>
+             <h2>PUBLICA TUS PRODUCTOS</h2>
          </div>
+         <div class="registro_hijo2">
+             <p>Tu como estudiante puedes publicar objetos sin marca que quieras vender, ya sean creados por ti o de segunda mano</p>
+        </div>
          <div class="registro_hijo1">
             <a href="https://forms.gle/qNx3TRXu1KgY22XB7"><button>Publica aquí</button></a> 
          </div>
