--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
          <div class="registro_hijo2">
              <p>Tu como estudiante puedes publicar objetos sin marca que quieras vender, ya sean creados por ti o de segunda mano</p>
         </div>
+        <div class="registro_hijo2">
+             <figure class="registro_hijo2">
+                 <img src="imganes/Imagen de la seccion publicar.png" alt="">
+             </figure>
+        </div>
+       
          <div class="registro_hijo1">
             <a href="https://forms.gle/qNx3TRXu1KgY22XB7"><button>Publica aquí</button></a> 
          </div>
