Actualizacion de todo

--- a/Publicaciones.html
+++ b/Publicaciones.html
@@ -25,13 +25,18 @@
         </nav>
     </header>
  <section class="publicaciones">
-    <article class="publicación-1" id="publicación-1">
+    <div class="publicación-1" id="publicación-1">
         <h2>LAMPARAS MINECRAFT <strong>$320</strong> </h2>
         <img src="imganes/175990213_519825932759191_1395503692626574366_n.jpg" alt="">
         <p>Comentarios (2)</p>
-        <a href="file:///C:/Users/cristy/Desktop/MegamanVega%20Academy/Formulario.html" target="_blank"><input type=button value=Obten sesión gratis></a>
-        <button class="Principal-boton">Comprar</button>
-    </article>
+        <a href="Formulario de compra.html"><button class="Principal-boton">Comprar</button></a>
+    </div>
+    <div class="publicación-1" id="publicación-2">
+        <h2>LAMPARAS MINECRAFT <strong>$320</strong> </h2>
+        <img src="imganes/175990213_519825932759191_1395503692626574366_n.jpg" alt="">
+        <p>Comentarios (2)</p>
+        <a href="Formulario de compra.html"><button class="Principal-boton">Comprar</button></a>
+    </div>
  </section>
 </body>
 </html>
