--- a/Publicaciones.html
+++ b/Publicaciones.html
@@ -26,17 +26,28 @@
     </header>
  <section class="publicaciones">
     <div class="publicación-1" id="publicación-1">
-        <h2>LAMPARAS MINECRAFT <strong>$320</strong> </h2>
+        <div>
+        <h2>LAMPARAS MINECRAFT</h2>
+        </div>
+        <div>
         <img src="imganes/175990213_519825932759191_1395503692626574366_n.jpg" alt="">
+        </div>
+        <div class="pie">
         <p>Comentarios (2)</p>
         <a href="Formulario de compra.html"><button class="Principal-boton">Comprar</button></a>
+        </div>
     </div>
-    <div class="publicación-1" id="publicación-2">
-        <h2>LAMPARAS MINECRAFT <strong>$320</strong> </h2>
-        <img src="imganes/175990213_519825932759191_1395503692626574366_n.jpg" alt="">
+    <div class="publicación-1" id="publicación-1">
+        <div>
+        <h2>ILUSTRACIÓN</h2>
+        </div>
+        <div>
+        <img src="imganes/IMG_20210622_195312_388 - Daniela Chávez.jpg" alt="">
+        </div>
+        <div class="pie">
         <p>Comentarios (2)</p>
         <a href="Formulario de compra.html"><button class="Principal-boton">Comprar</button></a>
-    </div>
+        </div>
  </section>
 </body>
 </html>
